maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    keepHandOnSideWall(x)
  }
  prendBiscuit()
}

def keepHandOnSideWall(x : Int) {
  if (murcote(x)){
    if (!estFaceMur())
    	avance()
    else if (x==0)
    	droite()
    else
    	gauche()
    
  }
 
  
}



def murcote(x:Int) : Boolean = {
  if (x==0){
    if (estFaceMur())
    	droite()
    else {
    	gauche()
    	if (estFaceMur()){
      	droite()
      	return true
    	}
    	else {
      	droite()
      	return false
    	}
    }
  }
  else {
    if (estFaceMur())
    	gauche()
    else {
     	droite()
   		if (estFaceMur()){
      	gauche()
      	return true
    	}
    	else {
      	gauche()
      	return false
    }
    }
    
  }
}